add default cmd to dockerfiles

--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -5,3 +5,5 @@ FROM mysql:5.8
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
 COPY --from=binary /go-s3-backup /bin/go-s3-backup
+
+CMD ["/bin/go-s3-backup"]
