--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,7 +1,7 @@
-ARG APP_IMAGE=codestation/go-s3-backup
+ARGARG APP_IMAGE=codestation/go-s3-backup
 FROM $APP_IMAGE AS binary
 
-FROM mysql:5.8
+FROM mysql:5.7
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
 COPY --from=binary /go-s3-backup /bin/go-s3-backup
