--- a/docker/gogs/Dockerfile
+++ b/docker/gogs/Dockerfile
@@ -6,4 +6,4 @@ LABEL maintainer="codestation <codestation404@gmail.com>"
 
 COPY --from=binary /go-s3-backup /bin/go-s3-backup
 
-CMD ["/bin/go-s3-backup"]
+ENTRYPOINT ["/bin/go-s3-backup"]
