add ca-certificates to postgres and mysql images

--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -4,6 +4,11 @@ FROM $APP_IMAGE AS binary
 FROM postgres:10
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
+RUN set -x \
+	&& apt-get update \
+	&& apt-get install -y --no-install-recommends ca-certificates \
+	&& rm -rf /var/lib/apt/lists/*
+
 COPY --from=binary /go-s3-backup /bin/go-s3-backup
 
 ENTRYPOINT ["/bin/go-s3-backup"]
