copy certificates from base image

--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -4,11 +4,7 @@ FROM $APP_IMAGE AS binary
 FROM mysql:5.7
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
-RUN set -x \
-	&& apt-get update \
-	&& apt-get install -y --no-install-recommends ca-certificates \
-	&& rm -rf /var/lib/apt/lists/*
-
+COPY --from=binary /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=binary /go-s3-backup /bin/go-s3-backup
 
 ENTRYPOINT ["/bin/go-s3-backup"]
