--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ workspace:
 
 pipeline:
   test:
-    image: golang:1.10-alpine
+    image: golang:1.10
     commands:
       - go get -u golang.org/x/lint/golint
       - go vet ./...
