--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,26 @@
 #   unused-packages = true
 
 
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.14.24"
+
+[[constraint]]
+  name = "github.com/mholt/archiver"
+  version = "2.0.0"
+
+[[constraint]]
+  name = "github.com/robfig/cron"
+  version = "1.1.0"
+
+[[constraint]]
+  name = "github.com/urfave/cli"
+  version = "1.20.0"
+
+[[constraint]]
+  name = "gopkg.in/clog.v1"
+  version = "1.2.0"
+
 [prune]
   go-tests = true
   unused-packages = true
