--- a/.drone.yml
+++ b/.drone.yml
@@ -18,8 +18,8 @@ pipeline:
     mirror: https://registry-proxy.megpoid.xyz
     secrets: [ docker_username, docker_password ]
     build_args:
-      - BUILD_NUMBER=$DRONE_BUILD_NUMBER
-      - COMMIT_SHA=$DRONE_COMMIT_SHA
+      - BUILD_NUMBER=${DRONE_BUILD_NUMBER}
+      - COMMIT_SHA=${DRONE_COMMIT_SHA}
     tags:
       - latest
 
