use alpine:3.8 for base image

--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,10 +1,10 @@
 ARG APP_IMAGE=codestation/go-s3-backup
-FROM $APP_IMAGE AS binary
+FROM $APP_IMAGE AS app
 
 FROM mysql:5.7
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
-COPY --from=binary /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=binary /go-s3-backup /bin/go-s3-backup
+COPY --from=app /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=app /bin/go-s3-backup /bin/go-s3-backup
 
 ENTRYPOINT ["/bin/go-s3-backup"]
