--- a/docker/gogs/Dockerfile
+++ b/docker/gogs/Dockerfile
@@ -1,9 +1,9 @@
 ARG APP_IMAGE=codestation/go-s3-backup
-FROM $APP_IMAGE AS binary
+FROM $APP_IMAGE AS app
 
 FROM gogs/gogs:0.11.53
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
-COPY --from=binary /go-s3-backup /bin/go-s3-backup
+COPY --from=app /bin/go-s3-backup /bin/go-s3-backup
 
 ENTRYPOINT ["/bin/go-s3-backup"]
