--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,10 +1,10 @@
 ARG APP_IMAGE=codestation/go-s3-backup
 FROM $APP_IMAGE AS app
 
-FROM mysql:5.7
+FROM alpine:3.8
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
-COPY --from=app /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+RUN apk add --no-cache ca-certificates mysql-client
 COPY --from=app /bin/go-s3-backup /bin/go-s3-backup
 
 ENTRYPOINT ["/bin/go-s3-backup"]
