--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -1,10 +1,10 @@
 ARG APP_IMAGE=codestation/go-s3-backup
 FROM $APP_IMAGE AS app
 
-FROM postgres:10
+FROM alpine:3.8
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
-COPY --from=app /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+RUN apk add --no-cache ca-certificates postgresql-client
 COPY --from=app /bin/go-s3-backup /bin/go-s3-backup
 
 ENTRYPOINT ["/bin/go-s3-backup"]
