--- a/dockerhub/mysql/Dockerfile
+++ b/dockerhub/mysql/Dockerfile
@@ -1,9 +1,9 @@
-FROM registry.megpoid.xyz/go-s3-backup AS app
+FROM codestation/go-s3-backup AS app
 
 FROM alpine:3.8
 LABEL maintainer="codestation <codestation404@gmail.com>"
 
-RUN apk add --no-cache ca-certificates postgresql-client
+RUN apk add --no-cache ca-certificates mysql-client
 COPY --from=app /bin/go-s3-backup /bin/go-s3-backup
 
 ENTRYPOINT ["/bin/go-s3-backup"]
