--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,7 +38,7 @@
   version = "1.1.0"
 
 [[constraint]]
-  name = "github.com/urfave/cli"
+  name = "gopkg.in/urfave/cli.v1"
   version = "1.20.0"
 
 [[constraint]]
