--- a/docker/consul/Dockerfile
+++ b/docker/consul/Dockerfile
@@ -1,4 +1,5 @@
-FROM registry.megpoid.xyz/go-s3-backup AS app
+ARG REPOSITORY=registry.megpoid.xyz
+FROM $REPOSITORY/go-s3-backup AS app
 
 FROM consul:1.2.1
 LABEL maintainer="codestation <codestation404@gmail.com>"
