--- a/.drone.yml
+++ b/.drone.yml
@@ -3,38 +3,39 @@ name: default
 type: docker
 
 steps:
-  - name: test
-    image: golang:1.14
+  - name: lint
+    image: golangci/golangci-lint:v1.41.0
     commands:
-      - go mod download
-      - go install golang.org/x/lint/golint
-      - go vet ./...
-      - go test -v ./...
-      - golint -set_exit_status `find . -type d -not -path "./vendor*" -not -path "./.git*"`
+      - golangci-lint run --no-config -v --timeout 10m ./...
+
+  - name: test
+    image: golang:1.16
+    commands:
+      - go test -coverprofile cover.out -v ./...
+      - go tool cover -func cover.out
+    environment:
+      GOPROXY:
+        from_secret: goproxy_url
 
   - name: build
-    image: registry.megpoid.xyz/drone-docker
+    image: registry.corp.megpoid.xyz/drone-docker
     settings:
-      repo: registry.megpoid.xyz/go-s3-backup
+      repo: registry.corp.megpoid.xyz/go-s3-backup
+      tags: latest
       registry: registry.megpoid.xyz
       mirror: http://mirror:5000
-      tags: latest
-      experimental: true
-      stream: true
-      target: builder
-      push_target: true
-      cache_from:
-        - registry.megpoid.xyz/go-s3-backup:builder
-        - registry.megpoid.xyz/go-s3-backup:latest
       build_args:
-        - CI_TAG=${DRONE_TAG}
-        - BUILD_NUMBER=${DRONE_BUILD_NUMBER}
-        - BUILD_COMMIT_SHORT=${DRONE_COMMIT_SHA:0:8}
-        - CI_BUILD_CREATED=${DRONE_BUILD_CREATED}
+        - CI_COMMIT_TAG=${DRONE_TAG}
+        - CI_COMMIT_BRANCH=${DRONE_BRANCH}
+        - CI_COMMIT_SHA=${DRONE_COMMIT_SHA}
+        - CI_PIPELINE_CREATED_AT=${DRONE_BUILD_CREATED}
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
+    environment:
+      GOPROXY:
+        from_secret: goproxy_url
     volumes:
       - name: cache
         path: /var/lib/docker
@@ -50,10 +51,13 @@ steps:
       password:
         from_secret: dockerhub_password
       build_args:
-        - CI_TAG=${DRONE_TAG}
-        - BUILD_NUMBER=${DRONE_BUILD_NUMBER}
-        - BUILD_COMMIT_SHORT=${DRONE_COMMIT_SHA:0:8}
-        - CI_BUILD_CREATED=${DRONE_BUILD_CREATED}
+        - CI_COMMIT_TAG=${DRONE_TAG}
+        - CI_COMMIT_BRANCH=${DRONE_BRANCH}
+        - CI_COMMIT_SHA=${DRONE_COMMIT_SHA}
+        - CI_PIPELINE_CREATED_AT=${DRONE_BUILD_CREATED}
+    environment:
+      GOPROXY:
+        from_secret: goproxy_url
     volumes:
       - name: cache
         path: /var/lib/docker
