--- a/.drone.yml
+++ b/.drone.yml
@@ -31,6 +31,9 @@ steps:
       tags: latest
       registry: registry.megpoid.xyz
       buildkit: true
+      platforms:
+        - linux/amd64
+        - linux/arm64
       cache:
         - registry.megpoid.xyz/codestation/go-s3-backup:${DRONE_BRANCH}-cache
       build_args:
