--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,6 +53,4 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            CI_COMMIT_BRANCH=${{ github.ref_name }}
-            CI_COMMIT_SHA=${{ github.sha }}
-            CI_PIPELINE_CREATED_AT=${{ steps.date.outputs.timestamp }}
+            CI_COMMIT_TAG=${{ github.ref_name }}
