update gitea image

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ platform:
 
 steps:
   - name: lint
-    image: golangci/golangci-lint:v1.52.1
+    image: golangci/golangci-lint:v1.52.2
     commands:
       - golangci-lint run --no-config -v --timeout 10m ./...
     environment:
@@ -35,7 +35,7 @@ steps:
       buildkit: true
       platforms:
         - linux/arm64
-        - linux/amd64
+      # - linux/amd64
       cache:
         - registry.megpoid.dev/codestation/go-s3-backup:${DRONE_BRANCH}-cache
       build_args:
@@ -47,35 +47,7 @@ steps:
     environment:
       GOPROXY:
         from_secret: goproxy_url
-    when:
-      branch:
-        - master
-
-  - name: build-branch
-    image: ghcr.io/codestation/drone-docker
-    settings:
-      repo: registry.megpoid.dev/codestation/go-s3-backup
-      tags: ${DRONE_BRANCH}
-      registry: registry.megpoid.dev
-      buildkit: true
-      platforms:
-        - linux/arm64
-      cache:
-        - registry.megpoid.dev/codestation/go-s3-backup:${DRONE_BRANCH}-cache
-      build_args:
-        - CI_COMMIT_TAG=${DRONE_TAG}
-      username:
-        from_secret: docker_username
-      password:
-        from_secret: docker_password
-    environment:
-      GOPROXY:
-        from_secret: goproxy_url
-    when:
-      branch:
-        - testing
 
 trigger:
   branch:
     - master
-    - testing
