--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ platform:
 
 steps:
   - name: lint
-    image: golangci/golangci-lint:v1.54.2
+    image: golangci/golangci-lint:v1.55.2
     commands:
       - golangci-lint run --no-config -v --timeout 10m ./...
     environment:
@@ -26,17 +26,12 @@ steps:
         from_secret: goproxy_url
 
   - name: build
-    image: ghcr.io/codestation/drone-docker
+    image: ghcr.io/codestation/drone-kaniko
     settings:
-      repos:
-        - registry.megpoid.dev/codestation/go-s3-backup
+      repo: registry.megpoid.dev/codestation/go-s3-backup
       tags: latest
       registry: registry.megpoid.dev
-      buildkit: true
-      platforms:
-        - linux/arm64
-      # - linux/amd64
-      cache:
+      cache_from:
         - registry.megpoid.dev/codestation/go-s3-backup:${DRONE_BRANCH}-cache
       build_args:
         - CI_COMMIT_TAG=${DRONE_TAG}
